...
                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="5oI-LN-jDg" secondAttribute="trailing" constant="20" symbolic="YES" id="yMS-gw-eLM"/>
                                            </constraints>
                                        </tableViewCellContentView>
                                        <connections>
                                            <outlet property="cellImage" destination="9NW-wW-Ktu" id="vKh-EZ-w46"/>
                                            <outlet property="dateLabel" destination="5oI-LN-jDg" id="3Ly-RD-9HQ"/>
                                            <outlet property="likeButton" destination="zOd-JA-Fp9" id="84R-Zc-jeR"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                                <connections>
                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="a15-6q-9HU"/>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="4bf-A4-lTc"/>
...
                            <constraint firstItem="HrB-AB-rdG" firstAttribute="leading" secondItem="idv-tu-HCH" secondAttribute="leading" constant="9" id="k3K-a9-ETw"/>
                            <constraint firstItem="gBL-Ae-5sf" firstAttribute="leading" secondItem="95h-6T-eGy" secondAttribute="leading" id="vub-FX-V8g"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="8dQ-Qd-ifZ"/>
                    <connections>
                        <outlet property="backButton" destination="HrB-AB-rdG" id="bJs-uK-bg4"/>
                        <outlet property="imageView" destination="e8Z-TX-kNc" id="1yg-JB-zZN"/>
                        <outlet property="scrollView" destination="gBL-Ae-5sf" id="gr4-da-dIi"/>
                        <outlet property="shareButton" destination="kRG-pV-S3C" id="J2r-PI-GXA"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="aho-su-ERT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="vFR-TP-rnA"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Войти">
                                    <color key="titleColor" name="YP Black"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="16"/>
                                    </userDefinedRuntimeAttribute>
...
